# simple_create_repo

./: README.md  pyproject.toml  setup.py
simple_create_repo/: __init__.py  cli.py  create_repo.py
