[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "simple_create_repo"
version = "1.1.1"
description = "A Python library for creating GitHub repositories."
authors = ["diter89ahmadchiper <typingoflist@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
